# entropy-core-evolution

./: CITATION.bib  README.md  pyproject.toml  requirements.txt
.github/workflows/: static.yml
VR2915_+1res_adiabatic/: cold_gas_mass.npy  gas_history_density_Rcore_Thot_Onr.npy  gas_history_density_Rfield_Thot_Oref.npy  gas_history_density_Rshell_Thot_Oref.npy  gas_history_entropy_Rfield_Thot_Oref.npy  gas_history_entropy_Rshell_Thot_Oref.npy  gas_history_radius_Rcore_Thot_Oref.npy  gas_history_radius_Rshell_Thot_Onr.npy  gas_history_radius_Rshell_Thot_Oref.npy  gas_history_temperature_Rcore_Thot_Oref.npy  gas_history_temperature_Rfield_Thot_Onr.npy  gas_history_temperature_Rfield_Thot_Oref.npy  gas_history_temperature_Rshell_Thot_Oref.npy  hot_gas_mass.npy  k500.npy  m500.npy  params.yml  t500.npy
analysis_scripts/: basic_properties.py  compute_maps.py  final_bh_ids.py  final_gas_ids.py  final_halo_centre.py  gas_phase_space.py  interactive_m500_plot.py  interactive_phase_space.py  particle_history.py  plot_runtime.py  profiles_thermodynamic.py  submit_analysis.slurm  utils_clean_vr_submit_files.py  utils_rename_vr_mpi.py
data/: README.md
data/VR18_+1res_adiabatic/: centre_potential.npy  cold_gas_mass.npy  final_center_0199.npy  final_m200_0199.npy  gas_history_density_Rcore_Thot_Onr.npy  gas_history_density_Rcore_Thot_Oref.npy  (+30 more)
docs/: citing.rst  conf.py  index.rst  lagrangian_histories.rst  profiles.rst  projected_maps.rst  properties.rst  science.rst
figures_scripts/: fig1.py  fig2.py  fig3.py  fig4.py  fig5.py  fig6.py  fig7.py  lookback.py  zbands.py
(+218 files in other folders)
