[tool.poetry]
name = "entropy-core-evolution"
version = "0.1"
description = "Compute and save base visualization metrics for SWIFT snapshots."
authors = ["Edoardo Altamura edoardo.altamura@outlook.com"]
license = "Apache License Version 2.0"

[tool.poetry.dependencies]
python = "^3.7"
attrs = "^22.1.0"
numpy = "^1.23"
unyt = "^2.9"
astropy = "^5.1"
sciris = "^1.2"
swiftsimio = "^1.0"
tqdm = "^4.64"
velociraptor = "^3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
